2008-01-01  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: Specificity and priority are now supported.

	* Parser.pm (get_selector_specificity): New method.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Cascade.pm: New Perl module.

	* Parser.pm: |@namespace| prohibbitted immediately
	following |@namespace| rules by mistake.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for border-style properties, as a model case
	for shorthand properties.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Ignore property which is not supported by the
	application.  Support for properties with a keyword being
	able to be specified is added.

2007-12-31  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: At-keywords were not case-insensitive.
	Support for property value parsing.  Empty declarations
	were not supported.  Raise errors for broken declarations.
	Parser and serializer definition for |color| is added.

2007-12-24  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for |@namespace| rule.

	* SelectorsSerializer.pm: Support for |lookup_namespace_prefix|
	parameter is added.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for the |@charset| rule.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_char_string): A poor support for error
	line/column reporting is added.  Support for pseudo-element
	and pseudo-class.

2007-12-23  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: New module.

	* SelectorsParser.pm (parse_string): Split into |parse_string|
	and |_parse_selectors_with_tokenizer|.  Support for "end by
	token T" option.  Return the last token as well as the
	parsed selectors pbject.

2007-11-24  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsParser.pm (parse_string): Raise errors if appropriate.

2007-10-28  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsSerializer.pm (serialize_test): Namespace prefix
	IS namespace URI for sorting stability (attribute and :not()
	selectors).
